website is now responsive for all webrowsers, added basic navbar component

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -38,6 +38,11 @@
 }
 
 body {
-	background-image: url('../components/background_orange.png');
+  background-image: url('../components/background_orange.png');
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
   background-repeat: no-repeat;
 }
