--- a/src/css/App.css
+++ b/src/css/App.css
@@ -38,7 +38,7 @@
 }
 
 body {
-  background-image: url('../components/background_orange.png');
+  background-image: url('../components/background_orange.jpg');
   height: 100%;
   width: 100%;
   background-position: center;
