--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,7 +1,38 @@
 /* #myImg {
 	
 } */
+.img_logo {
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	transition: ease 0.5s;
+}
 
+.img_logo:hover {
+	width: 205px;
+	height: 205px;
+}
 .navbar-custom {
 	height: 64px;
+	background-image: url('../images/nav_background.jpg');
+	background-size: cover;
+	box-shadow: 0px -10px 20px 20px rgb(223, 164, 87);
+}
+
+.logout_btn {
+	margin-left: 15;
+	margin-top: 5;
+	margin-right: 3;
+	font-weight: bold;
+	border-radius: 15px;
+	background-color: rgb(190, 162, 142);
+	opacity: 0.5;
+	transition: ease 0.5s;
+	width: 80px;
+	height: 40px;
+}
+
+.logout_btn:hover {
+	opacity: 1;
+	background-color: rgb(218, 90, 31);
 }
