Files and folders organized (in prog.)

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -7,7 +7,7 @@
 	border: 4px 4px 4px solid #5555;
 	padding: 10px;
 	border-radius: 50px;
-	background-image: url('../background_orange.jpg');
+	background-image: url('../../src/images/background_orange.jpg');
 	background-size: cover;
 	box-shadow: 0px -10px 40px 30px rgb(221, 200, 187);
 }
@@ -38,7 +38,7 @@
 	position: border;
 	top: 50%;
 	margin-top: -5px;
-	background-image: url('../background_orange.jpg');
+	background-image: url('../../src/images/background_orange.jpg');
 	background-size: cover;
 }
 
@@ -61,6 +61,6 @@
 
 	height: 35px;
 	margin-top: 10px;
-	background-image: url('../background_orange.jpg');
+	background-image: url('../../src/images/background_orange.jpg');
 	background-size: cover;
 }
