--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -37,5 +37,20 @@
 
 h5 {
 	font-size: 17;
-	margin-right: 10px; 
+	margin-right: 10px;
+}
+
+.navLink {
+	color: rgb(150, 140, 94) !important;
+	font-size: 17px;
+	font-weight: inherit;
+	transition: all ease 0.2s;
+}
+.navLink:hover {
+	color: rgb(94, 82, 82) !important;
+	font-size: 17px;
+	font-weight: bold;
+	cursor: pointer;
+	border:tomato;
+	text-shadow: 0px 10px 5px #aaa396;
 }
