--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,5 +1,9 @@
 .myStyle {
-	background-image: Url('../images/nav_background.jpg');
+	background-image: url('../images/nav-background.jpg');
 	background-size: auto;
 	margin-top: 64px;
+}
+
+.fa {
+ font-size: 1.75em;
 }
