--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -12,7 +12,7 @@
 }
 .navbar-custom {
 	height: 64px;
-	background-image: url('../../src/images/nav_background.jpg');
+	background-image: url('../images/nav-background.jpg');
 	background-size: cover;
 	box-shadow: 0px -10px 20px 20px rgb(223, 164, 87);
 }
