addtional sideNav bars added

--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -1,10 +1,8 @@
 .container {
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
-.context {
-    background-color: red;
-	display: absolute;
-    align-items: center;
-    justify-content: center;
+.hp-divs {
+    flex: 1;
 }
