--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -1,15 +1,17 @@
 .container {
-    display: flex;
-    flex-direction: row;
-    margin-left: 30%;
+	display: flex;
+	flex-direction: row;
+    margin-left: 10%;
+	align-items: center;
+	
 }
 
 h3 {
-    margin-top: 5%;
-    margin-left: 50%;
+	margin-top: 5%;
+	margin-left: 50%;
 }
 
 .admin-form {
-    margin-top: 2%;
-    margin-left: 19%;
+	margin-top: 2%;
+	margin-left: 19%;
 }
