--- a/src/css/App.css
+++ b/src/css/App.css
@@ -45,6 +45,7 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
 form label {
