--- a/src/css/login.css
+++ b/src/css/login.css
@@ -16,11 +16,10 @@
 	width: 100%;
 	padding: 10px;
 }
-
-label{
+.login-label {
 	font-size: 15;
 	margin-top: 5px;
-	margin-left: 15px
+	margin-left: 15px;
 }
 
 .login-img {
@@ -35,24 +34,19 @@ label{
 	border-style: outset;
 }
 
-.btn {
+.login-btn {
 	display: block;
-	margin-left: 55px;
+	margin-left: 60%;
 	margin-right: auto;
 	width: 150px;
 	background: #ff9933;
 	border-radius: 25px;
 	height: 50px;
 	position: border;
-	top: 50%;
-	margin-top: -5px;
+	margin-top: 50%;
 	background-image: url('../images/background_orange.jpg');
 	background-size: cover;
 	transition: all ease 0.5s;
-}
-
-.wrapper {
-	text-align: center;
 }
 
 .myInput {
@@ -61,15 +55,15 @@ label{
 	width: 430%;
 }
 
-.not-user{
+.not-user {
 	width: 200px;
 	margin-left: 65px;
 	margin-top: 5px;
 }
 
-.signup-link{
+.signup-link {
 	margin-left: -5px;
 }
-.btn:hover {
+.login-btn:hover {
 	opacity: 0.7;
 }
