--- a/src/css/Package.css
+++ b/src/css/Package.css
@@ -1,7 +1,7 @@
 .package {
 	width: 610px;
 	height: 5rem;
-	margin-left: -140px;
+	margin-top: 1%;
 	background-color: rgb(253, 197, 113);
 	position: relative;
 	border-radius: 25px;
