New class name to h# titles, please pay attention

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -55,3 +55,8 @@ input:focus, select:focus {
     box-shadow: none !important;
     border-color: orange !important;
 }
+
+.h-as-title {
+    margin-top: 5%;
+    margin-left: 50%;
+}
