Design order bt buttons

--- a/src/css/orders.css
+++ b/src/css/orders.css
@@ -2,3 +2,11 @@
     width: 70%;
     margin: 2% 10% auto 10%;
 }
+
+.sort-by-btn {
+    height: 30px;
+    float: right;
+    color: orange;
+    background-color: black;
+    border-radius: 30%;
+}
