--- a/src/css/Package.css
+++ b/src/css/Package.css
@@ -40,3 +40,21 @@
 	margin-top: 2%;
 	margin-bottom: 5%;
 }
+
+.card-body {
+	padding: 1%;
+	min-height: auto;
+}
+
+.card-link {
+	padding-left: 30%;
+	color: orange
+}
+
+.add-new-package-link {
+	color:rgb(145, 94, 0);
+}
+
+.add-new-package-link:hover {
+	color:rgb(238, 184, 84);
+}
