--- a/src/css/Package.css
+++ b/src/css/Package.css
@@ -51,10 +51,14 @@
 	color: orange
 }
 
+.card-link:hover {
+	color:rgb(238, 184, 84);
+}
+
 .add-new-package-link {
 	color:rgb(145, 94, 0);
 }
 
 .add-new-package-link:hover {
-	color:rgb(238, 184, 84);
+	color:rgb(209, 151, 42);
 }
