--- a/src/css/search-bar.css
+++ b/src/css/search-bar.css
@@ -2,7 +2,7 @@
 	border-radius: 15px;
 	height: 39px;
 	width: 260px;
-	margin-right: 105vh;
+	margin-right: 100rem;
 	transition: all ease 0.7s;
 }
 
