--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -70,8 +70,9 @@
 
 .envelope {
 	margin-top: 1%;
-	margin-right: 4%;
+	margin-right: 1vh;
 	font-size: 17px;
+	color:black
 }
 
 .envelope :hover {
