--- a/src/css/inbox.css
+++ b/src/css/inbox.css
@@ -10,3 +10,13 @@
     display: flex;
     flex-direction: row;
 }
+
+.envelope {
+	margin-top: 1%;
+	margin-right: 1vh;
+	font-size: 17px;
+}
+
+.envelope :hover {
+	cursor: pointer;
+}
