--- a/src/css/inbox.css
+++ b/src/css/inbox.css
@@ -1,12 +1,20 @@
-.modal-dialog{
-    position: relative;
-    display: table; /* <-- This makes the trick */
-    overflow-y: auto;    
-    overflow-x: auto;
-    width: auto;
-    min-width: 300px;   
+.modal-dialog {
+	position: relative;
+	display: table; /* <-- This makes the trick */
+	overflow-y: auto;
+	overflow-x: auto;
+	width: auto;
+	min-width: 300px;
 }
-.message{
-    display: flex;
-    flex-direction: row;
+.message {
+	display: flex;
+	flex-direction: row;
+}
+
+.my-modal {
+	width: 90vw; /* Occupy the 90% of the screen width */
+	max-width: 90vw;
+	height: 60vw;
+    max-height: 90vw;
+
 }
