Drastic design changes has been made, and a suspicious account has been deleted

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -38,7 +38,7 @@
 }
 
 body {
-	background-image: url('../images/background_orange.jpg');
+	background-color: #f4f4f4;
 	height: 100%;
 	width: 100%;
 	background-position: center;
