--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -1,10 +1,19 @@
-.container {
+.container-admin {
     display: flex;
     flex-direction: row;
-    margin-left: 30%;
+    margin-left: 43%;
+    border-style: solid;
+    width: 350px;
+    height: 250px;
 }
 
 .admin-form {
-    margin-top: 2%;
+    margin-top: 10%;
     margin-left: 19%;
 }
+
+.submit-btn {
+    margin-left: 56px;
+    margin-top: 25px;
+}
+
