--- a/src/css/search-bar.css
+++ b/src/css/search-bar.css
@@ -3,7 +3,7 @@
 	height: 39px;
 	width: 260px;
 	transition: all ease 0.7s;
-	margin-top: 1.1vh;
+	margin-top: 5px;
 }
 
 .search-input:focus {
@@ -14,7 +14,7 @@
 
 .glass {
 	margin-left: 40%;
-	margin-top: 2vh;
+	margin-top: 15px;
 	color: black;
 }
 
