--- a/src/css/sign-up.css
+++ b/src/css/sign-up.css
@@ -7,7 +7,7 @@
 	box-shadow: 0px -10px 40px 30px rgb(221, 200, 187);
 	border-radius: 50px;
 	padding: 10px;
-	background-image: url('../images/background_orange.jpg');
+	background-image: url('../images/background_blue.jpg');
 	background-size: cover;
 }
 .myForm {
@@ -26,22 +26,24 @@
 	height: 20%;
 	width: 55%;
 	border-radius: 50%;
-	border-style: outset;
 }
 
-.btn {
+.btn-signup {
 	display: block;
-	margin-left: 60px;
+	margin-left: 54px;
 	margin-right: auto;
 	width: 100px;
-	background: #ff99b3;
-	border-radius: 25px;
-	height: 40px;
+	background: #b7e9f8;
+	border-radius: 12px;
+	height: 50px;
 	position: border;
 	top: 50%;
-	margin-top: 15px;
-	background-image: url('../images/background_orange.jpg');
+	margin-top: 24px;
 	background-size: cover;
+	transition: all ease 0.5s;
+}
+.btn-signup:hover {
+	background-color: #78dcfa;
 }
 .wrapper {
 	text-align: center;
