updated pictures on readme and fixed the button on customer list

--- a/src/css/orders.css
+++ b/src/css/orders.css
@@ -13,7 +13,7 @@
 }
 
 .accept-btn {
-    margin-left: 50vh;
+    margin-left: 470px;
     border-radius: 12px;
     width: 100px;
     height: 45px;
